# chatgpt_to_claude

./: ABOUT.md  CHANGELOG.md  CONTRIBUTING.md  README.md  __main__.py  browser_automation_template.py  chatgpt_migration_tui.py  migrate_chatgpt_to_claude.py  migration_core.py  pyproject.toml  requirements-dev.txt  review_state.py  selection.example.json
.github/workflows/: ci.yml  release.yml
chatgpt_to_claude_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: smoke_test.py
src/chatgpt_to_claude_toolkit/: browser_automation_template.py  chatgpt_migration_tui.py  migrate_chatgpt_to_claude.py  migration_core.py  review_state.py
src/chatgpt_to_claude_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_toolkit.py
